yaml_parser/tests/fail/directive-variants-2.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 1, column 5
  |
1 | %***
  |     ^
invalid directive
